# clawtype

./: Cargo.toml  README.md  build.rs  cb.bat  cr.bat  crr.bat  hex.bat  rust-toolchain.toml  t.bat
.cargo/: config.toml
chords/: Cargo.toml
chords/src/: keycodes.rs  lib.rs  sample_layers.rs
macros/: Cargo.toml
macros/src/: lib.rs
main/: Cargo.toml  build.rs  memory.x
main/.cargo/: config.toml
main/src/: futures.rs  layout.rs  main.rs  rust_wrapper.cpp  rust_wrapper.h  usb_kbd.rs  usb_simpler.rs
main/src/cc/: core_pins.h  pins_teensy.c  rust_wrapper.cpp  rust_wrapper.h  usb_api.cpp  usb_api.h
main/src/layout/: mod.rs
old-v2.0/: README.md  cbr.bat  rust-toolchain.toml
old-v2.0/chords/src/: lib.rs  sample_layers.rs
old-v2.0/main/: Cargo.toml
old-v2.0/main/.cargo/: config.toml
old-v2.0/main/src/: main.rs
old-v2.0/main/src/cc/: pins_teensy.c  rust_wrapper.cpp
src/: keycodes.rs  lib.rs  main.rs  rust_wrapper.cpp  rust_wrapper.h  sample_layers.rs  usb_kbd.rs  usb_simpler.rs
src/layout/: mod.rs
usbd-hut/: Cargo.toml
usbd-hut/src/: lib.rs
wip/: Cargo.toml
wip/macros/: Cargo.toml
wip/macros/src/: lib.rs
wip/src/: keycodes.rs  lib.rs  sample_layers.rs
