[workspace.package]
authors = ["Mateusz Czapliński <czapkofan@gmail.com>"]
license = "AGPL-3.0-or-later"
edition = "2021"

[workspace]
resolver = "2"
members = ["main"]

[workspace.dependencies]
embassy-executor = { version = "0.7.0", features = ["task-arena-size-98304", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-futures = { version = "0.1.0" }
embassy-rp = { version = "0.4.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
embassy-sync = { version = "0.6.2", features = ["defmt"] }
embassy-time = { version = "0.4.0", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-usb = { version = "0.4.0", features = ["defmt"] }
#cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
critical-section = "1.1"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
usbd-hid = "0.8.1"

const_map = { git = "https://github.com/akavel/const_map", branch = "master" }
thiserror = { version = "2.0.12", default-features = false }
mpu6050-async = { git = "https://github.com/akavel/mpu6050-async" }

usbd-hut = { path = "usbd-hut/" }
clawtype-chords = { path = "chords/" }
clawtype-macros = { path = "macros/" }


[profile.dev]
debug = 2
lto = true
opt-level = "z"

[profile.release]
codegen-units = 1
debug = 2
lto = true
opt-level = 'z'

