[package]
name = "clawtype"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
embassy-executor.workspace = true
embassy-time.workspace = true
embassy-nrf.workspace = true

cortex-m.workspace = true
cortex-m-rt.workspace = true
panic-halt.workspace = true

