[package]
name = "clawtype"
version = "2.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
embassy-executor.workspace = true
embassy-futures.workspace = true
embassy-rp.workspace = true
embassy-usb.workspace = true
cortex-m.workspace = true
cortex-m-rt.workspace = true
critical-section.workspace = true
panic-probe.workspace = true
usbd-hid.workspace = true

defmt.workspace = true
defmt-rtt.workspace = true

usbd-hut.workspace = true
thiserror.workspace = true

