[package]
name = "clawtype"
version = "2.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
embassy-executor.workspace = true
embassy-futures.workspace = true
embassy-rp.workspace = true
embassy-sync.workspace = true
embassy-time.workspace = true
embassy-usb.workspace = true
embassy-usb-logger.workspace = true
cortex-m.workspace = true
cortex-m-rt.workspace = true
critical-section.workspace = true
defmt.workspace = true
defmt-rtt.workspace = true
embedded-hal-bus.workspace = true
panic-probe.workspace = true
usbd-hid.workspace = true

const_map.workspace = true
thiserror.workspace = true
mpu6050-async.workspace = true
log.workspace = true
nokia5110lcd.workspace = true

usbd-hut.workspace = true
clawtype-chords.workspace = true
clawtype-macros.workspace = true
