[package]
name = "clawtype"
version = "2.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

# [[bin]]
# name = "clawtype"
# test = false
# bench = false

[dependencies]
clawtype-chords.workspace = true
clawtype-macros.workspace = true
const_map.workspace = true
debouncr.workspace = true
# embedded-hal.workspace = true
mpu6050-dmp.workspace = true
# nb.workspace = true
# panic-halt.workspace = true
# ufmt.workspace = true
# ufmt-write.workspace = true

# [dependencies.embedded-hal-v0]
# # TODO: what's this and do we need it and why? copied from avr-hal/examples/atmega2560/Cargo.toml
# version = "0.2.3"
# package = "embedded-hal"

